# cgal_examples

./: .gitignore  CMakeLists.txt
PolygonMeshProcessing/: CMakeLists.txt  detectFeatures.cpp  holeFill_polyLine.cpp  triangulate_faces.cpp
Scale_space_reconstruction_3/: CMakeLists.txt  scale_space_advancing_front.cpp
SurfaceMesh/: CMakeLists.txt  sm_aabbtree.cpp  sm_bgl.cpp  sm_circulators.cpp  sm_derivation.cpp  sm_do_intersect.cpp  sm_join.cpp  sm_memory.cpp
Surface_mesh_skeletonization/: CMakeLists.txt
advancing_front_surface_reconstruction/: CMakeLists.txt  reconstruction_surface_mesh.cpp
polygon_mesh_processing/: Isotropic_remeshing.cpp  hole_fill.cpp  poisson_recons.cpp  refine_fair.cpp  test.cpp
surface_mesh/: sm_iterators.cpp  sm_properties.cpp
surface_mesh_skeletonization/: simple_mcfskel_example.cpp
