project(Surface_mesh_skeletonization_Examples)
cmake_minimum_required(VERSION 3.3)

find_package(CGAL QUIET)
if(CGAL_FOUND)
    find_package(Eigen3 3.2.0)
    if(EIGEN3_FOUND)
        include(${EIGEN3_USE_FILE})
        add_executable(simple_mcfskel simple_mcfskel_example.cpp)
        target_link_libraries(simple_mcfskel CGAL::CGAL)
    else()
        message(STATUS "These programs require the Eigen library (3.2 or greater), and will not be compiled.")
    endif()
else()
    message(STATUS "This program requires the CGAL library, and will not be compiled.")
endif()
